objects/Collab_Migrated_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collab_AccountId__c</fullName>
        <description>Collab AccountId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collab AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Com2_Account_Id__c</fullName>
        <description>Com2 Account Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Com2 Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Claim_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Claim System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Group Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Date__c</fullName>
        <description>Collab MigrationDate</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS Group Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Collab Migrated Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collab Migrated Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collab Migrated Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>